# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  käyttöohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Monopoli.tehtävät.1-2.txt  Viikko 3 - Tehtävä 3.txt  Viikko 3 - Tehtävä 4.txt
src/: database_connection.py  initialize_database.py  main.py  registration.py  ui.py  user_login.py
src/entities/: login.py  user.py
src/repositories/: login_repository.py  user_repository.py
src/services/: hashing_service.py  logins_service.py  user_service.py  validation_service.py
src/tests/: logins_test.py  main_test.py  registration_test.py  user_login_test.py  validation_test.py
src/views/: item_view.py  list_view.py  login_view.py  registration_view.py  ui.py
